# R2Framework

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-setup.md  AGENTS.md  REQUIREMENTS.md  alembic.ini  main.py  populate.py  pyproject.toml  settings.py
.github/: renovate.json
.github/workflows/: unit-tests.yml
agent_tools/: __init__.py  hooks.py  image.py  utils.py
database/: general.py
database/agents/: models.py  uitars.py
database/auth/: models.py  utils.py
database/keys/: models.py
database/logging/: models.py  orm_events.py
database/populators/: __init__.py  agents.json  agents.py  routers.json  routers.py  tools.py
database/provider/: models.py
database/tools/: models.py
docker/: docker-compose.yml
docker/otel/: otel-collector-config.yaml
docker/prometheus/: prometheus.yml
gateway/: agent.py  models.py  prompts.py  templates.py
middlewares/: __init__.py  auth.py
migrations/: env.py
modules/: models.py
modules/uierror/: prompts.py  templates.py
routers/: __init__.py  agents.py  auth.py  keys.py  logging.py  provider.py  recovery.py  tools.py
s3/: __init__.py  utils.py
security/: token.py  utils.py
tests/agent_tools/: test_agent_logging_hook.py  test_limit_tool_counts.py  test_tool_logging_hook.py
tests/conftest/: mock_strands_model_fixture.py
tests/integration/: test_integration_s3.py
tests/shared/: test_mock_strands_model.py
tests/unit/: conftest.py
tests/unit/agent_tools/: test_agent_logging_hook.py  test_image_tools.py  test_limit_tool_counts.py  test_tool_logging_hook.py  test_utils_tools.py
tests/unit/conftest/: __init__.py  mock_s3_client_fixture.py  mock_strands_model_fixture.py  session_fixture.py
tests/unit/fixtures/: agent_fixtures.py  auth_fixtures.py  client_fixture.py  logging_fixtures.py  mock_s3_client_fixture.py  mock_strands_model_fixture.py  router_fixtures.py  session_fixture.py  tool_fixtures.py
tests/unit/middlewares/: test_auth.py
tests/unit/routers/: test_agents.py  test_auth.py  test_logging.py  test_logging_key_exceptions.py  test_provider.py  test_recovery_report_result.py  (+3 more)
(+9 files in other folders)
